feat(layout): more mobile friendly layout

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 		content='width=device-width,initial-scale=1'
 	>
 
-	<title>Canasta Scores</title>
+	<title>Kanaskulator</title>
 
 	<link
 		rel='icon'
-		type='image/png'
-		href='/favicon.png'
+		type='image/ico'
+		href='/favicon.ico'
 	>
 	<link
 		href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
