--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 
 	<link
 		rel='icon'
-		type='image/ico'
-		href='/favicon.ico'
+		type='image/png'
+		href='/favicon.png'
 	>
 	<link
 		href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
