--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,32 @@
 	<meta charset='utf-8'>
 	<meta
 		name='viewport'
-		content='width=device-width,initial-scale=1'
+		content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'
 	>
 
 	<title>Kanaskulator</title>
 
 	<link
-		rel='icon'
-		type='image/png'
-		href='/favicon.png'
+		rel=”manifest”
+		href=”/manifest.json”
+	>
+	<link
+		rel="icon"
+		type="image/png"
+		sizes="128x128"
+		href="/favicon-128x128.png"
+	>
+	<link
+		rel="icon"
+		type="image/png"
+		sizes="32x32"
+		href="/favicon-32x32.png"
+	>
+	<link
+		rel="icon"
+		type="image/png"
+		sizes="16x16"
+		href="/favicon-16x16.png"
 	>
 	<link
 		href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
